Fix: couldn't see number input in dark mode

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -271,6 +271,10 @@ input[type="text"]:focus, input.timepicker:focus{
     border: solid var(--primary-text-color) 1px !important;
 }
 
+input[type="number"] {
+    color: var(--primary-text-color);
+}
+
 button, button:hover, select, select:hover {
     text-align: center;
     cursor: pointer;
